resources/public/css/style.css
/* some style */

body { background: #eee; }

body,
.pure-g [class *= "pure-u"],
.pure-g-r [class *= "pure-u"] {
    font-family: Raleway;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
}

.logo {
  width: 33%;
  display: block;
  margin: 0 auto;
}

.service-menu {
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 0.5em;
}

.service {
    border-style: solid none none none;
    border-width: 1px;
    margin: 0 0 1rem 0;
}

.gallery-image {
    margin: 0;
    border: 0;
    width: 100%;
    height: 100%;
}

.gallery-row {
    display: table-row;
}

.gallery-cell {
    border: 0;
    display: inline-block;
}

.profile-picture {
  max-width: 74%;
  display: block;
  margin: 0 auto;
  border-radius: 50%;
}

.profile-name {
  text-align: center;
}

.text-center {
  text-align: center;
}

.site-heading {
  padding: 0.5em;
  text-align: center;
  border-width: 0 0 1px 0;
  border-style: none none solid none;
  border-color: rgba(0,0,0,0.25);
}

